# TreatRadar

./: .gitignore  README.md  app.py  pyproject.toml  terminal.txt
templates/: base.html  index.html  login.html
