[project]
name = "hbd"
version = "0.1.0"
description = ""
authors = [
    {name = "Kabshah",email = "iamkabshah@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "instagrapi (>=2.2.1,<3.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
